2006-06-23  Roger Leigh  <rleigh@whinlatter.ukfsn.org>

	* debian/changelog: Update rules.

2006-06-23  Roger Leigh  <rleigh@debian.org>

	* test/Makefile.am
	(TESTS): Remove sbuild-lock, because it can fail randomly on slow
	or heavily loaded systems due to timing constraints.

	* bootstrap: Create m4 directory if it doesn't exist.

	* Makefile.am
	(dist-hook): Remove junk from distdir such as temorary files.
	(EXTRA_DIST): Distribute bootstrap and m4 macros and templates.

	* configure.ac: Add checks for find and xargs.

2006-06-23  Roger Leigh  <rleigh@debian.org>

	* API documentation additions.

	* Add @RELEASE_DATE@ in place of hard-coded date in all manual
	pages.

	* configure.ac: Use SCHROOT_RELEASE_DATE.

	* bootstrap: Generate autoconf macro with embedded release date.

	* scripts/schroot_release.m4.in: New file.  Autoconf macro
	template to define release date.

2006-06-23  Roger Leigh  <rleigh@debian.org>

	* schroot/Makefile.am: Add new files.  Additionally, build
	schroot.la and dchroot.la static libraries to ease linking.

	* schroot/dchroot-options.cc, schroot/dchroot-dsa-options.cc,
	schroot/schroot-options.cc: Remove compatibility setup.

	* schroot/schroot-options-base.(cc|h): Remove compatibility_type
	and compat member.

	* schroot/dchroot-main.(cc|h), schroot/dchroot-dsa-main.(cc|h):
	New files.  These two classes derive from schroot::main, and
	override its virtual methods to customise it for dchroot and
	dchroot-dsa respectively.

	* schroot/schroot-main.(cc|h): New files.  This new class contains
	all the functionality of schroot.cc, but is separated into
	separate methods, which may be overridden in other
	implementations.

	* dchroot.cc, dchroot-dsa.cc, schroot.cc: These files (two new)
	are stubs to instantiate an appropriate main object and run it.

	* schroot.cc: Move all functionality into schroot-main.cc.

	* schroot/schroot.cc, schroot/schroot-listmounts.cc,
	schroot/schroot-releaselock.cc (main): Don't disable debugging