@@ -9,7 +9,7 @@ if [ -d scripts ]; then
 else
   mkdir scripts
 fi
-sed "s/@RELEASE_DATE@/`date '+%d %b %Y'`/" scripts/schroot_release.m4.in > m4/schroot_release.m4
+sed -e "s/@RELEASE_DATE@/`date '+%d %b %Y'`/" -e "s/@RELEASE_UDATE@/`date '+%s'`/" scripts/schroot_release.m4.in > m4/schroot_release.m4
 
 echo "libtoolize"
 libtoolize --force --copy
