@@ -54,7 +54,10 @@ using namespace schroot_listmounts;
 void
 print_version (std::ostream& stream)
 {
-  stream << format(_("schroot-listmounts (Debian sbuild) %1%\n")) % VERSION
+  format fmt(_("%1% (Debian sbuild) %2% (%3%)\n"));
+  fmt % "schroot-listmounts" % VERSION % sbuild::date(RELEASE_DATE);
+
+  stream << fmt
 	 << _("Written by Roger Leigh\n\n")
 	 << _("Copyright (C) 2004-2006 Roger Leigh\n")
 	 << _("This is free software; see the source for copying conditions.  There is NO\n"
