@@ -23,6 +23,6 @@
 # Makefiles.
 AC_DEFUN([SCHROOT_RELEASE_DATE],
 [dnl Set package release date
+AC_DEFINE_UNQUOTED([RELEASE_DATE], @RELEASE_UDATE@, [Package release date.])
 RELEASE_DATE="@RELEASE_DATE@"
-AC_DEFINE_UNQUOTED([RELEASE_DATE], "${RELEASE_DATE}", [Package release date.])
 AC_SUBST([RELEASE_DATE])])
